--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
 				</div>-->
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/yannick-jost.jpg" alt="Yannick Jost">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Yannick JOST</h4>
@@ -787,7 +787,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Fabrice LIEGEY">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Fabrice LIEGEY</h4>
@@ -797,7 +797,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/alexis-martin.jpg" alt="Alexis MARTIN">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Alexis MARTIN</h4>
@@ -807,7 +807,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Johann MICHEL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Johann MICHEL</h4>
@@ -817,7 +817,7 @@
 				</div>	
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/frederic-mossmann.jpg" alt="Frédéric MOSSMANN">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Frédéric MOSSMANN</h4>
@@ -827,7 +827,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/axel-neveux.jpg" alt="Axel NEVEUX">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Axel NEVEUX</h4>
@@ -841,7 +841,7 @@
 			<section class="team-section section" style="padding-top: 0;">
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/antoine-parmentier.jpg" alt="Antoine PARMENTIER">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Antoine PARMENTIER</h4>
@@ -851,12 +851,23 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/florian-petit.jpg" alt="Florian PETIT">
 					
 						<div class="team-member-text">
 							<h4 class="team-member-name">Florian PETIT</h4>
-							<div class="team-member-position">Développement informatique</div>
+							<div class="team-member-position">Coach technique, ITS Future</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/cyril-rayot.jpg" alt="Cyril RAYOT">
+					
+						<div class="team-member-text">
+							<h4 class="team-member-name">Cyril RAYOT</h4>
+							<div class="team-member-position">Coach technique, ITS Future</div>
 						</div>
 					</div>
 				</div>
@@ -887,17 +898,6 @@
 						<div class="team-member-text">
 							<h4 class="team-member-name">Pascal THISSE</h4>
 							<div class="team-member-position">Data privacy</div>
-						</div>
-					</div>
-				</div>
-
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/leo-unbekandt.jpg" alt="Léo UNBEKANDT">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Léo UNBEKANDT</h4>
-							<div class="team-member-position">Scalingo</div>
 						</div>
 					</div>
 				</div>
@@ -938,6 +938,16 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/leo-unbekandt.jpg" alt="Léo UNBEKANDT">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Léo UNBEKANDT</h4>
+							<div class="team-member-position">Scalingo</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Manuel YGUEL</h4>
@@ -947,7 +957,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/widad-zaghloul.jpg" alt="Widad ZAGHLOUL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Widad ZAGHLOUL</h4>
