--- a/index.html
+++ b/index.html
@@ -1411,10 +1411,10 @@
 						#HICamp
 					</h3>					
 					
-					<!--<div style="display: block; margin-bottom: 40px; font-size: 18px;">
-						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNVWxzQlBKeV9JNTg" target="_blank">Communiqué de presse</a> - 
-						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNQUhzZlMtekhiOXFUVE1OcEt1MFprLVJYN0VV" target="_blank">Dossier de presse</a>
-					</div>-->
+					<div style="display: block; margin-bottom: 40px; font-size: 18px;">
+						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNcDhBTGpkdGhnY00" target="_blank">Communiqué de presse</a> - 
+						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNdTlWNGpmSWFNR3M" target="_blank">Dossier de presse</a>
+					</div>
 
 					<div class="footer-socmed">						
 						<a href="http://facebook.com/alsace.digitale" target="_blank"><span class="fa fa-facebook"></span></a>
