--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
 							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/jury/philippe-commaret.jpg" alt="Philippe Commaret">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Philippe Commaret</h4>
+									<h4 class="team-member-name">Philippe COMMARET</h4>
 									<div class="team-member-position">Directeur ÉS Énergies Strasbourg</div>
 								</div>
 							</div>
@@ -1026,16 +1026,31 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/jury/lilla-merabet.jpg" alt="Lilla MERABET">
+								<img class="team-member-picture" src="images/contents/jury/guillaume-maurer.jpg" alt="Philippe Commaret">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Lilla MERABET</h4>
-									<div class="team-member-position">Vice-présidente Innovation et Recherche de la Région Grand Est</div>
+									<h4 class="team-member-name">Guillaume MAURER</h4>
+									<div class="team-member-position">Responsable Organisation et Application de la Stratégie chez Thurmelec</div>
 								</div>
 							</div>
 						</div>
 
 					</div>
 
+				</div>
+
+			</section>
+
+			<section class="team-section section" style="padding-top: 0;">
+
+				<div class="col-sm-6 col-md-4 col-lg-2 fadeIn animated done-animation" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/jury/lilla-merabet.jpg" alt="Lilla MERABET">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Lilla MERABET</h4>
+							<div class="team-member-position">Vice-présidente Innovation et Recherche de la Région Grand Est</div>
+						</div>
+						
+					</div>
 				</div>
 
 			</section>
