--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 							<li><a href="#how-it-works">Déroulement</a></li>
 							<li><a href="#keynotes">Keynotes</a></li>
 							<li><a href="#coachs">Coachs &amp; Jury</a>
-							<!--<li><a href="#prizes">Prix</a>
-							<li><a href="#winners">Résultats</a>-->
+							<li><a href="#prizes">Prix</a>
+							<!--<li><a href="#winners">Résultats</a>-->
 							<li><a href="#sponsors">Partenaires</a></li>
 							<li><a href="#faq">FAQ</a></li>
 
@@ -1055,7 +1055,7 @@
 
 			</section>
 
-			<!--<section id="prizes" class="section section-dark">
+			<section id="prizes" class="section section-dark">
 				
 				<div class="section-background">
 					<div class="section-background-image parallax" data-stellar-ratio="0.4">
@@ -1074,6 +1074,27 @@
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
+									<h3>Prix ÉS</h3>
+									<p>Incubation + 12 séances d’1h30 réparties sur 6 mois avec des experts d’ÉS</p>
+								</div>
+							</div>				
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix « RHÉNATIC »</h3>
+									<p>Proposé par Rhénatic - Cluster du Numerique<br>4 demi-journées d’accompagnement du porteur de projet</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix STRATAGGEM</h3>
+									<p>2 demi-journées de conseil et d’aide à la conception d’un objet connecté</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
 									<h3>Prix LA FABRIQUE</h3>
 									<p>Les lauréats La Fabrique du Hacking Industry Camp recevront un abonnement à La Fabrique dont ils pourront disposer pour réaliser les versions futures de leurs prototypes. La Fabrique ouvrira ses portes et sa communauté de makers à l'équipe gagnante pour les accompagner tant sur les aspects conception que réalisation.</p>
 								</div>
@@ -1082,35 +1103,7 @@
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix SCALINGO</h3>
-									<p>La société Scalingo, service cloud  d'hébergement web, propose deux prix. Pour le premier, 1000€ de crédits utilisables sur la plateforme, et pour le deuxième et troisième, 500€ de crédits utilisables sur la plateforme.</p>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
-								<div class="col-xs-9">
-									<h3>Prix ÉS</h3>
-									<p>Incubation d’une Startup pendant 6 mois</p>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
-								<div class="col-xs-9">
-									<h3>Prix ORANGE</h3>
-									<p>Formation pour utiliser api, lesquelles et pour quel usage - notamment iot<br>Une journee en boutique pour tester son produit</p>
-								</div>
-							</div>							
-							<div class="row">
-								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
-								<div class="col-xs-9">
-									<h3>Prix « RHÉNATIC »</h3>
-									<p>Proposé par Rhénatic - Cluster du Numerique<br>4 demi-journées d’accompagnement du porteur de projet  par Digit Prime + 2CRSI + Evolution Service + ITS Future</p>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
-								<div class="col-xs-9">
-									<h3>Prix ACCRO</h3>
-									<p></p>
+									<p> La société Scalingo, service cloud d'hébergement web, propose deux prix. Pour le premier, 1000€ de crédits utilisables sur la plateforme, et pour le deuxième et troisième, 500€ de crédits utilisables sur la plateforme.</p>
 								</div>
 							</div>
 						</div>
@@ -1118,15 +1111,29 @@
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
-									<h3>Prix PRGLOBALMEDIA</h3>
-									<p>Mise à disposition de l’outil Invite The Media. Un communiqué de presse rédigé, présentant le gagnant de l’événement. Un envoi en national au média local + national + presse spécialisée + pays francophone (valeur de 1217€)</p>
+									<h3>Prix ALSACE DIGITALE</h3>
+									<p>Les lauréats Alsace Digitale auront accès à l’espace Flex pendant 6 mois pour tous les membres de l’équipe, ainsi qu’un accès gratuit au Startup Weekend Strasbourg du 24 au 26 novembre.</p>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
-									<h3>Prix ALSACE DIGITALE</h3>
-									<p>Les lauréats Alsace Digitale auront accès à l’espace Flex pendant 6 mois pour tous les membres de l’équipe, ainsi qu’un accès gratuit au Startup Weekend Strasbourg du 18 au 20 novembre.</p>
+									<h3>Prix ITS FUTURE + AGORA CALYCE</h3>
+									<p>Mise à disposition de la plateforme Cloud IoT Agora gratuitement pour 10 devices pendant 1 an et accompagnement d'Agora Calycé" + "2 demi-journées d'accompagnement par un expert ITS Future dans les projets IoT</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix THURMELEC</h3>
+									<p>Coaching et accès à la chaîne de prototypage</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix PRGLOBALMEDIA</h3>
+									<p>Mise à disposition de l’outil Invite The Media. Un communiqué de presse rédigé, présentant le gagnant de l’événement. Un envoi en national au média local + national + presse spécialisée + pays francophone</p>
 								</div>
 							</div>
 							<div class="row">
@@ -1136,20 +1143,13 @@
 									<p>Formation à l’Utilisation du processeur graphique parallèlement aux processeurs pour accélérer les solutions numériques;programmation GPU, outils avancés, en partenariat avec Nvidia (durée 1 journée)</p>
 								</div>
 							</div>
-							<div class="row">
-								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
-								<div class="col-xs-9">
-									<h3>Prix DÔME INCUBATEUR</h3>
-									<p>Il sera décerné à l'équipe d'intrapreneurs la plus audacieuse dans le potentiel de disruption de son projet. Elle gagnera un accompagnement sur 6 mois par les coachs de Dôme Incubateur, pour que l'Or du Rhin coule de leurs veines !<br>L'accompagnement, d'une valeur de 25 000 €, est offert par Gilles Auberger, Véronique Campillo, Yan-Erik Decorde et Gérald Masson. L'équipe sélectionnée rejoindra 4 startups ayant intégré l'Accélérateur depuis septembre pour vivre en synergie le déploiement de son projet.</p>
-								</div>
-							</div>
 						</div>
 
 					</div>
 
 				</div>
 
-			</section>-->
+			</section>
 
 			<!--<section id="winners" class="section">
 
@@ -1250,7 +1250,7 @@
 						<a href="http://alsacalcul.unistra.fr/" target="_blank"><img src="images/contents/alsacalcul.jpg" alt="Alsa Calcul"></a>
 						<a href="http://www.conectus.fr/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/satt.png" alt="satt connectus"></a>
 						<a href="https://www.federation-industries-alsace.com/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/fia.png" alt="fia"></a>
-						<!--<a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="images/contents/prglobalmedia.png" alt="PR Global Media"></a>-->
+						<a href="http://prglobalmedia.com/" target="_blank" style="background: white; padding: 0 5px;"><img src="images/contents/prglobalmedia.png" alt="PR Global Media"></a>
 						<!--<a href="http://invitethemedia.com/" target="_blank"><img src="images/contents/invitethemedia.jpg" alt="InviteTheMedia"></a>-->
 						<!--<a href="http://www.innovation-in-design.com/" target="_blank"><img src="images/contents/logo IID.jpg" alt="Innovation In Design"></a>-->
 						<a href="http://http://epitech.eu/" target="_blank"><img style="background: white; height: 90px; padding: 5px;" src="images/contents/epitech.png" alt="Epitech"></a>
