--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 									</ul>
 		
 									<div class="hero-buttons col-md-12 text-center">
-										<a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>
+										<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>
 										<!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>-->
 										<!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
 
