--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
 								<img class="team-member-picture" src="images/contents/jury/francois-kormann.jpg" alt="François KORMANN">
 								<div class="team-member-text">
 									<h4 class="team-member-name">François KORMANN</h4>
-									<div class="team-member-position">Président et fondateur de La Fabrique, centre de production partagé"</div>
+									<div class="team-member-position">Président et fondateur de La Fabrique, centre de production partagé</div>
 								</div>
 							</div>
 						</div>
@@ -1104,6 +1104,13 @@
 								<div class="col-xs-9">
 									<h3>Prix SCALINGO</h3>
 									<p> La société Scalingo, service cloud d'hébergement web, propose deux prix. Pour le premier, 1000€ de crédits utilisables sur la plateforme, et pour le deuxième et troisième, 500€ de crédits utilisables sur la plateforme.</p>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix ALSACE INNOVATION</h3>
+									<p>Adhésion Alsace Innovation<br> 1/2 journée de diagnostique innovation</p>
 								</div>
 							</div>
 						</div>
