--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<li><a href="#hero" class="hidden">Top</a></li>
 
 							<li><a href="#about">A Propos</a></li>
-							<li><a href="#how-it-works">Déroulement</a></li>
+							<li><a href="#how-it-works">Planning</a></li>
 							<li><a href="#keynotes">Keynotes</a></li>
 							<li><a href="#coachs">Coachs &amp; Jury</a>
 							<li><a href="#prizes">Prix</a>
@@ -301,6 +301,11 @@
 
 				</div>
 
+				<div class="row">
+					<div class="col-md-12 text-center">
+						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNbVhjZnVyQ3FGNE0" target="_blank">GRANDE​ ​PREMIERE​ ​: LE​ ​HACKING​ ​INDUSTRY​ ​CAMP​ ​DEVIENT​ ​TRINATIONAL​ ​!</a> &nbsp;-&nbsp; <a href="https://drive.google.com/open?id=0B0S2y3rk51DNa0RaUTJOdl9JWEE" target="_blank">Sie sprechen Deutsch ?</a>
+					</div>
+				</div>
 			</section>
 
 
@@ -368,6 +373,15 @@
 
 				</div>
 
+			</section>
+
+
+			<section id="planning" class="section">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-6 col-md-offset-3 closing-buttons" data-animation="tada"><a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary">Consulter le planning complet</a></div>
+					</div>
+				</div>
 			</section>
 
 
@@ -487,14 +501,6 @@
 
 				</div>
 
-			</section>
-
-			<section id="planning" class="section">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 closing-buttons" data-animation="tada"><a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary">Consulter le planning complet</a></div>
-					</div>
-				</div>
 			</section>
 
 			<section id="keynotes" class="section section-dark">
@@ -986,7 +992,7 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-3" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/nophoto.png" alt="Roland	DE GUIO">
+								<img class="team-member-picture" src="images/contents/jury/roland-de-guio.jpg" alt="Roland	DE GUIO">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Roland	DE GUIO</h4>
 									<div class="team-member-position">Professeur à l'INSA Strasbourg, expert en innovation</div>
