--- a/index.html
+++ b/index.html
@@ -1156,6 +1156,13 @@
 									<p>Formation à l’Utilisation du processeur graphique parallèlement aux processeurs pour accélérer les solutions numériques;programmation GPU, outils avancés, en partenariat avec Nvidia (durée 1 journée)</p>
 								</div>
 							</div>
+							<div class="row">
+								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
+								<div class="col-xs-9">
+									<h3>Prix CAISSE D'EPARGNE</h3>
+									<p></p>
+								</div>
+							</div>
 						</div>
 
 					</div>
