--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
 					</div>
 				</div>
 
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+				<!--<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/florence-remy.jpg" alt="Florence REMY">
 						<div class="team-member-text">
@@ -886,10 +886,10 @@
 							<div class="team-member-position">Marketing</div>
 						</div>
 					</div>
-				</div>
+				</div>-->
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/bestien-stella.jpg" alt="Bastien STELLA">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Bastien STELLA</h4>
@@ -899,11 +899,21 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/pascal-thisse.jpg" alt="Pascal THISSE">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Pascal THISSE</h4>
 							<div class="team-member-position">Data privacy</div>
+						</div>
+					</div>
+				</div>
+				
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/leo-unbekandt.jpg" alt="Léo UNBEKANDT">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Léo UNBEKANDT</h4>
+							<div class="team-member-position">Scalingo</div>
 						</div>
 					</div>
 				</div>
@@ -944,16 +954,6 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/leo-unbekandt.jpg" alt="Léo UNBEKANDT">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Léo UNBEKANDT</h4>
-							<div class="team-member-position">Scalingo</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Manuel YGUEL</h4>
@@ -963,7 +963,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/widad-zaghloul.jpg" alt="Widad ZAGHLOUL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Widad ZAGHLOUL</h4>
