--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@
 						</div>
 					</div>
 				</div>
-				
+
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/leo-unbekandt.jpg" alt="Léo UNBEKANDT">
@@ -1160,7 +1160,7 @@
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix CAISSE D'EPARGNE</h3>
-									<p></p>
+									<p>Accompagnement d'un chargé d'affaires innovation</p>
 								</div>
 							</div>
 						</div>
