remove registrarion links

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 							<li><a href="#faq">FAQ</a></li>
 
 							<!-- HEADER ACTION BUTTON -->
-							<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-primary">S'inscrire</a></li>
+							<!--<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-primary">S'inscrire</a></li>-->
 							<li class="header-action-button"><a target="_blank" href="http://hic2017.sparkboard.com" class="btn btn-primary">Les défis</a></li>
 							<!-- <li class="header-action-button"><a target="_blank" href="http://2015.hackingindustry.camp" class="btn btn-primary">Édition 2015</a></li> -->
 						</ul>
@@ -155,7 +155,7 @@
 							</div>
 
 
-							<div class="newsbox col-md-10 col-md-offset-1">
+							<!--<div class="newsbox col-md-10 col-md-offset-1">
 								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-bullhorn"></i> &nbsp;Besoin de conseils pour pitcher votre projet ?</div>
 								<div class="row" style="margin-bottom: 15px;">
 									<div class="col-md-6">									
@@ -165,7 +165,7 @@
 										<a class="btn btn-default" style="width: 100%;" href="http://hic2017.sparkboard.com/" target="_blank">Déposer mon projet sur le sparkboard</a>
 									</div>
 								</div>
-							</div>
+							</div>-->
 
 							<!-- <div class="newsbox col-md-10 col-md-offset-1">
 								<div style="font-size: 18px;color:#fff;padding-bottom: 10px;" class="text-center"><i class="fa fa-calendar"></i> &nbsp;Événements organisés par nos partenaires (gratuits mais sur inscription)</div>
@@ -243,7 +243,7 @@
 									</ul>
 		
 									<div class="hero-buttons col-md-12 text-center">
-										<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>
+										<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a><!--<a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>-->
 										<!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>-->
 										<!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
 
@@ -403,11 +403,11 @@
 
 							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="https://www.facebook.com/media/set/?set=a.1455759991105511.1073741839.114361761912014&type=1&l=4099b7e0a2"class="btn btn-lg btn-primary" target="_blank">Voir les photos</a></div>
 						</div>-->
-						<div class="col-md-6">
+						<!--<div class="col-md-6">
 							<h3 class="closing-shout">Prêt à passer à l'action ? La première étape c'est de vous inscrire !</h3>
 
 							<div class="closing-buttons" data-animation="tada"><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-lg btn-primary">J'y vais !</a></div>
-						</div>
+						</div>-->
 						<div class="col-md-6">
 							<h3 class="closing-shout">Inscris ? Consultez dès à présent la liste des défis, vous pouvez également proposer le vôtre !</h3>
 
