--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
 								<div class="col-xs-3" style="text-align: right; font-size: 60px;"><i class="fa fa-trophy"></i></div>
 								<div class="col-xs-9">
 									<h3>Prix SCALINGO</h3>
-									<p> La société Scalingo, service cloud d'hébergement web, propose deux prix. Pour le premier, 1000€ de crédits utilisables sur la plateforme, et pour le deuxième et troisième, 500€ de crédits utilisables sur la plateforme.</p>
+									<p> La société Scalingo, service cloud d'hébergement web, propose deux prix. Pour le premier, 1000€ de crédits utilisables sur la plateforme, et pour le deuxième 500€ de crédits utilisables sur la plateforme.</p>
 								</div>
 							</div>
 							<div class="row">
