--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<li><a href="#keynotes">Keynotes</a></li>
 							<li><a href="#coachs">Coachs &amp; Jury</a>
 							<li><a href="#prizes">Prix</a>
-							<!--<li><a href="#winners">Résultats</a>-->
+							<li><a href="#winners">Résultats</a>
 							<li><a href="#sponsors">Partenaires</a></li>
 							<li><a href="#faq">FAQ</a></li>
 
@@ -243,8 +243,8 @@
 									</ul>
 		
 									<div class="hero-buttons col-md-12 text-center">
-										<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a><!--<a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>-->
-										<!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>-->
+										<!--<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a>--><!--<a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>-->
+										<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
 										<!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
 
 									</div>
@@ -1171,33 +1171,33 @@
 
 			</section>
 
-			<!--<section id="winners" class="section">
+			<section id="winners" class="section">
 
 				<div class="container">
 
 					<h2 class="section-heading text-center">Les résultats</h2>
 
-					<p class="col-md-12 text-center">Pas moins de 14 prototypes de projets sont sortis de cette édition 2016, et 9 d'entre eux ont été primés</strong></p>
+					<p class="col-md-12 text-center">Pas moins de 12 prototypes de projets sont sortis de cette édition 2017, et 10 d'entre eux ont été primés</strong></p>
 
 					<ul class="col-md-8 col-md-offset-2" style="padding-left: 50px;">
-						<li><i class="fa fa-trophy"></i> Prix La Fabrique : <a href="http://hic2016.sparkboard.com/project/57f7b1e4ca356d03005dcd0a" target="_blank">#19 - "Sakura : Assurer la sécurité du personnel isolé"</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Scalingo 1 (1000€) : <a href="http://hic2016.sparkboard.com/project/57ed301a105e7f03009b949f" target="_blank">#17 - "Sweet Home"</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Scalingo 2 (500€) : <a href="http://hic2016.sparkboard.com/project/57fb66d9a8fc5e0300a02fb8" target="_blank">#20 - "LogStradamus"</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Scalingo 3 (500€): <a href="http://hic2016.sparkboard.com/project/57b31c6176a3010300e2172b" target="_blank">#7  - "Mes coûts énergétiques"</a> et <a href="http://hic2016.sparkboard.com/project/57e51b14f4ba2103003a8e3b" target="_blank">14 - "ME : My Earth, My Energy"</a></li>
-						<li><i class="fa fa-trophy"></i> Prix ÉS : <a href="http://hic2016.sparkboard.com/project/57f7b1e4ca356d03005dcd0a" target="_blank"> #19 - "Sakura : Assurer la sécurité du personnel isolé"</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Orange : <a href="http://hic2016.sparkboard.com/project/5800cd398396e803002e62ac" target="_blank">#29 - "Stand'Up"</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Rhénatic : <a href="http://hic2016.sparkboard.com/project/57b5b6a27ce7cd03009db80b" target="_blank">#9 - "SOS+"</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Accro : <a href="http://hic2016.sparkboard.com/project/57fcc6f26b289603007175b2" target="_blank">#23 - "ID Crowd"</a></li>
-						<li><i class="fa fa-trophy"></i> Prix PRGlobalMedia : <a href="http://hic2016.sparkboard.com/project/57fe13815d72640300286d55" target="_blank">#27  - "TYPECO"</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Alsace Digitale 1 (coworking + billets swsxb): <a href="http://hic2016.sparkboard.com/project/5800cd398396e803002e62ac" target="_blank">#29 - "Stand'Up"</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Alsace Digitale 2 (billets swsxb): <a href="http://hic2016.sparkboard.com/project/57fd50bf5d72640300286cb7" target="_blank">#25 - "Log Us On"</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Alsa Calcul : <a href="http://hic2016.sparkboard.com/project/57fb66d9a8fc5e0300a02fb8" target="_blank">#20 - "LogStradamus"</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Dôme Incubateur : <a href="http://hic2016.sparkboard.com/project/57b31c6176a3010300e2172b" target="_blank">#7  - "Mes coûts énergétiques"</a> et <a href="http://hic2016.sparkboard.com/project/57e51b14f4ba2103003a8e3b" target="_blank">14 - "ME : My Earth, My Energy"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix ÉS : <a href="https://hic2017.sparkboard.com/project/59d36f5404f56904009bd097" target="_blank"> #15 - "UnIoTy : Le Réseau social des objets connectés"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Rhénatic : <a href="https://hic2017.sparkboard.com/project/59b034ef9c32bb04003c9b52" target="_blank">#10 - "SnifElec"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Strataggem : <a href="https://hic2017.sparkboard.com/project/59d63ab2cf3549040034d1a2" target="_blank">#18 - "Lost It"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix La Fabrique : <a href="https://hic2017.sparkboard.com/project/59d63ab2cf3549040034d1a2" target="_blank">#18 - "Lost It"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Scalingo 1 (1000€) : <a href="https://hic2017.sparkboard.com/project/59dcf77e1bf4390400c673b6" target="_blank">#23 - "ParkBnB"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Scalingo 2 (500€) : <a href="https://hic2017.sparkboard.com/project/59d36f5404f56904009bd097" target="_blank"> #15 - "UnIoTy : Le Réseau social des objets connectés"</a></li>
+						<li><i class="fa fa-trophy"></i> Alsace Innovation: <a href="https://hic2017.sparkboard.com/project/59ce3ca58fa36004004a0f1e" target="_blank">#13  - "Smart Maintenance"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Alsace Digitale : <a href="https://hic2017.sparkboard.com/project/59afe3799c32bb04003c9b43" target="_blank">#9 - "EcoCatch"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix ITS Future + Agora Calycé : <a href="https://hic2017.sparkboard.com/project/59d2916d04f56904009bd072" target="_blank">#14 - "WellBee"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Thurmelec : <a href="https://hic2017.sparkboard.com/project/59d2916d04f56904009bd072" target="_blank">#14 - "WellBee"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix PRGlobalMedia : <a href="https://hic2017.sparkboard.com/project/59da88ba580b81040089ea25" target="_blank">#19  - "Jean Bois"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Alsa Calcul : <a href="https://hic2017.sparkboard.com/project/59cb70a8a77a850400bff31c" target="_blank">#12 - "Majord'Home"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Caisse d'Epargne : <a href="https://hic2017.sparkboard.com/project/59d5f545cf3549040034d18e" target="_blank">#17 - "SuperKop"</a></li>
 					</ul>
 
 				</div>
 
-			</section>-->
+			</section>
 
 
 
