--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							<li><a href="#prizes">Prix</a>
 							<li><a href="#winners">Résultats</a>
 							<li><a href="#sponsors">Partenaires</a></li>
-							<li><a href="#faq">FAQ</a></li>
+							<!--<li><a href="#faq">FAQ</a></li>-->
 
 							<!-- HEADER ACTION BUTTON -->
 							<!--<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-primary">S'inscrire</a></li>-->
@@ -1181,7 +1181,7 @@
 
 					<ul class="col-md-8 col-md-offset-2" style="padding-left: 50px;">
 						<li><i class="fa fa-trophy"></i> Prix ÉS : <a href="https://hic2017.sparkboard.com/project/59d36f5404f56904009bd097" target="_blank"> #15 - "UnIoTy : Le Réseau social des objets connectés"</a></li>
-						<li><i class="fa fa-trophy"></i> Prix Rhénatic : <a href="https://hic2017.sparkboard.com/project/59b034ef9c32bb04003c9b52" target="_blank">#10 - "SnifElec"</a></li>
+						<li><i class="fa fa-trophy"></i> Prix Rhénatic : <a href="https://hic2017.sparkboard.com/project/59b034ef9c32bb04003c9b52" target="_blank">#10 - "SniffElec"</a></li>
 						<li><i class="fa fa-trophy"></i> Prix Strataggem : <a href="https://hic2017.sparkboard.com/project/59d63ab2cf3549040034d1a2" target="_blank">#18 - "Lost It"</a></li>
 						<li><i class="fa fa-trophy"></i> Prix La Fabrique : <a href="https://hic2017.sparkboard.com/project/59d63ab2cf3549040034d1a2" target="_blank">#18 - "Lost It"</a></li>
 						<li><i class="fa fa-trophy"></i> Prix Scalingo 1 (1000€) : <a href="https://hic2017.sparkboard.com/project/59dcf77e1bf4390400c673b6" target="_blank">#23 - "ParkBnB"</a></li>
