--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
 									<div class="hero-buttons col-md-12 text-center">
 										<!--<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a>--><!--<a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>-->
 										<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
+										<a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les photos</a>
 										<!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
 
 									</div>
@@ -398,21 +399,21 @@
 
 				<div class="container">
 					<div class="row">
-						<!--<div class="col-md-12">
-							<h3 class="closing-shout">L'événement #HICamp 2016 est fini, revivez l'événement à travers les photos prises par nos bénévoles !</h3>
+						<div class="col-md-12">
+							<h3 class="closing-shout">L'événement #HICamp 2017 est fini, revivez l'événement à travers les photos prises par nos bénévoles !</h3>
 
-							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="https://www.facebook.com/media/set/?set=a.1455759991105511.1073741839.114361761912014&type=1&l=4099b7e0a2"class="btn btn-lg btn-primary" target="_blank">Voir les photos</a></div>
-						</div>-->
+							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260"class="btn btn-lg btn-primary" target="_blank">Voir les photos</a></div>
+						</div>
 						<!--<div class="col-md-6">
 							<h3 class="closing-shout">Prêt à passer à l'action ? La première étape c'est de vous inscrire !</h3>
 
 							<div class="closing-buttons" data-animation="tada"><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2017-36489834076" class="btn btn-lg btn-primary">J'y vais !</a></div>
-						</div>-->
+						</div>
 						<div class="col-md-6">
 							<h3 class="closing-shout">Inscris ? Consultez dès à présent la liste des défis, vous pouvez également proposer le vôtre !</h3>
 
 							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hic2017.sparkboard.com/"class="btn btn-lg btn-primary" target="_blank">Voir les défis / Proposer un défi</a></div>
-						</div>
+						</div>-->
 					</div>
 				</div>
 
